# a3-ai-news

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
.claude/: settings.json
alembic/: env.py
alembic/versions/: 001_create_articles_table.py
docs/: api.md
postman/: ai-news-api.postman_collection.json
src/: aggregator.py  categories.py  cli.py  config.py  main.py  models.py  router.py  timezone.py
src/database/: __init__.py  connection.py  models.py  repository.py
src/formatters/: slack.py
src/sources/: base.py  google_rss.py  newsapi.py
terraform/: .terraform.lock.hcl  cloudbuild.tf  locals.tf  main.tf  outputs.tf  sql.tf
tests/: conftest.py  test_aggregator.py  test_categories.py  test_cli.py  test_digest.py  test_google_rss.py  test_main.py  test_models.py  test_newsapi.py  test_repository.py  test_router.py  test_slack.py  test_timezone.py
