[project]
name = "ai-news-api"
version = "2.0.0"
description = "API that retrieves authenticated AI news from the last week (Australia/Sydney timezone) with PostgreSQL persistence and Slack Block Kit output"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "feedparser>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]

[project.scripts]
ai-news = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
